--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,11 @@ API_HOST=127.0.0.1:8080
 DB_USER=postgres
 DB_PASS=postgres
 DB_URI=localhost:5432
-DB_NAME=syncspace
+DB_NAME=https://syncspace
+AUTH0_DOMAIN=syncspace.auth0.com
+AUTH0_FRONTEND_CLIENT_ID=
+AUTH0_FRONTEND_CLIENT_SECRET=
+AUTH0_SERVER_AUDIENCE=127.0.0.1:8080
+AUTH0_SERVER_CLIENT_ID=
+AUTH0_SERVER_CLIENT_SECRET=
+AUTH0_MANAGEMENT_AUDIENCE=https://syncspace.auth0.com/v2/api
