pfp edit functional; need to compress image

--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,8 @@ AUTH0_SERVER_ID=
 AUTH0_SERVER_CLIENT_ID=
 AUTH0_SERVER_CLIENT_SECRET=
 AUTH0_MANAGEMENT_AUDIENCE=https://syncspace.auth0.com/v2/api
+WASABI_ACCESS_KEY=
+WASABI_SECRET_KEY=
+WASABI_REGION=
+WASABI_BUCKET=
+WASABI_PFP_FILEPATH=
